--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,4 +1,12 @@
-RewriteEngine on
-RewriteCond %{REQUEST_FILENAME} !-d
+# BEGIN WordPress
+
+<IfModule mod_rewrite.c>
+RewriteEngine On
+RewriteBase /
+RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule . index.php [L]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule . /index.php [L]
+</IfModule>
+
+# END WordPress
